fix: prevent split button menu shift on close

--- a/packages/core/src/components/SplitButton/SplitButton.module.scss
+++ b/packages/core/src/components/SplitButton/SplitButton.module.scss
@@ -23,8 +23,8 @@
 }
 
 /* Disable press-scale on wrapper while split menu is open
-   to avoid layout shift on close */
-.button:has(button[aria-expanded="true"]) {
+to avoid layout shift on close */
+.active.splitContentOpen {
   transform: none;
 }
 
